# Code-Retreat-Templates

./: .gitignore  java-session  ruby-session
.JavaTemplate/ConwaysGameOfLife/tests/: FooTest.java
.RubyTemplate/: Guardfile
CoffeeScriptProject/spec/: PlayerSpec.js
RubyProject/: Gemfile
RubyProject/spec/: foo_spec.rb
RubyTestautomation/: Gemfile
RubyTestautomation/features/simple_feature/: simple.feature
RubyTestautomation/features/step_definitions/: valet_parking_steps.rb
RubyTestautomation/features/support/: parkcalc_page.rb  setup.rb
RubyTestautomation/features/valet_parking/: valet_parking.feature
RubyTestautomation/spec/: foo_spec.rb
clojure/: .gitignore  Makefile  README.md  project.clj
clojure/src/: core.clj
clojure/src/gdcr/: .core.clj.swp  core.clj
clojure/test/: test.clj
clojure/test/gdcr/: .core_test.clj.swp  test.clj
elixir/: Makefile  SUMMARY.md  actors.ex  assertion_test.exs
elixir/.docker/: Dockerfile
erlang/: Makefile
erlang/.docker/: Dockerfile
haskell/: .gitignore  Makefile  primefactors.cabal  primefactors.hs
haskell/.docker/: Dockerfile
java/: .classpath  build.gradle
java/ConwaysGameOfLife/: Makefile
java/gradle/wrapper/: gradle-wrapper.properties
javascript/: Makefile  karma.conf.js  package.json
php/: .gitignore  Makefile  README.md  behat.yml  composer.json  phpunit.xml
php/.docker/: Dockerfile
php/features/: Google.feature  Wikipedia.feature  Zeitplanung.feature
php/src/: PrimeFactors.php
php/tests/: PrimeFactorsTest.php  Tests.php  TheTest.php
ruby/: Guardfile  Makefile
(+21 files in other folders)
